# ophix-lang-ru-server-base

./: .gitignore  README.md  gen_version.py  pyproject.toml
src/ophix_lang_ru_server_base/: __init__.py  _version.py  apps.py  settings.py
src/ophix_lang_ru_server_base/docs/: access-auditing.md  client-quickstart.md  sections.yaml  server-installation.md
src/ophix_lang_ru_server_base/locale/ru/LC_MESSAGES/: django.mo  django.po
